fixed small issue where home link for mobile-logo was too big

--- a/web/resources/css/main.css
+++ b/web/resources/css/main.css
@@ -205,7 +205,6 @@ td {
     .mobile-logo {
         display: inline-block;
         text-align: center;
-        width: calc(95% - 34px);
         padding: 10px 0 10px 0;
         float: right;
         margin: auto;
